--- a/cctmpl.html
+++ b/cctmpl.html
@@ -40,6 +40,7 @@
     <script src="service/adminservice.js" type="text/javascript"></script>
     <script src="dir/cartparms.js" type="text/javascript"></script>
     <script src="ctrl/agentctrl.js" type="text/javascript"></script>
+    <script src="ctrl/billctrl.js" type="text/javascript"></script>
     <script src="ctrl/todoctrl.js" type="text/javascript"></script>
     <script src="ctrl/agentprodctrl.js" type="text/javascript"></script>
     <script src="ctrl/confirmationctrl.js" type="text/javascript"></script>
