--- a/tenants/Bridgevine/dtvmaster.html
+++ b/tenants/Bridgevine/dtvmaster.html
@@ -1,5 +1,5 @@
-<div class="container" ng-controller="surveyctrl">
-    <div class="container-content style1 clearfix">
+<div class="box-8" ng-controller="surveyctrl">
+    <div class="box-8-inner clearfix">
 
 
         <div class="clearer h20">&nbsp;</div>
@@ -9,7 +9,9 @@
         </div>
         <div class="clearer h20">&nbsp;</div>
 
-        <div class="btn2 w200 uppercase floatRight"><a ng-click="nextque()"><span class="a-button-inner"><span class="a-button-text">next</span></span></a></div>
+        <div class="row">
+            <div class="col-xs-4 col-lg-offset-4"><a ng-click="next()" class="btn btn-sm btn-primary btn-block uppercase"><span>continue</span></a></div>
+        </div>
 
         <div class="clearer h30">&nbsp;</div>
     </div><!-- /// -->
