--- a/tenants/Bridgevine/showsques.html
+++ b/tenants/Bridgevine/showsques.html
@@ -2,7 +2,7 @@
 
 <div class="clearer h20">&nbsp;</div>
 <div class="row">
-    <div class="col-md-3 box-1 style3" ng-repeat="r in currentQue.responses">
+    <div class="col-sm-2 box-1 style3" ng-repeat="r in currentQue.responses">
         <div class="inner clearfix">
             <div class="icons"><img src="{{topUrl}}{{r.imageUrl}}"></div>
             <h4>{{r.label}}<br>&nbsp;</h4>
