--- a/tenants/Bridgevine/tpv.html
+++ b/tenants/Bridgevine/tpv.html
@@ -16,8 +16,8 @@
                 <div class="btn-group">
                     <!--<button type="button" class="btn btn-sm btn-dark btn-icon"></button>-->
                     <div class="btn-group hidden-nav-xs">
-                        <button type="button" class="btn btn-sm btn-primary" ng-click="next()">
-                            Proceed
+                        <button type="button" class="btn btn-sm btn-primary" ng-click="finish()">
+                            Done
                         </button>
 
                     </div>
