--- a/admin/templ/stepTmpl.html
+++ b/admin/templ/stepTmpl.html
@@ -1,1 +1,1 @@
-<iframe style="width: 100%; height: 100%; min-height: 400px" ng-src="{{masterTmpl}}?step={{obj._id}}"></iframe>
+<iframe style="width: 100%; height: 100%; min-height: 400px" ng-src="{{stepTempl}}"></iframe>
