--- a/admin/templ/widgets/monthlybill.html
+++ b/admin/templ/widgets/monthlybill.html
@@ -1,6 +1,6 @@
 <div class="box-6" ng-controller="billctrl">
-        <div class="box-6-inner clearfix">
-            <a style="cursor: pointer" ng-click="recalc()"><h4 class="style4 bg2">My Bill Next 12 Month</h4> <i class="fa fa-refresh"></i></a>
+        <div class="box-6-inner clearfix" ng-show="hasproducts">
+            <a style="cursor: pointer" ng-click="recalc()"><i class="fa fa-refresh"></i><h5 class="style4 bg2">My Bill Next 12 Month</h5></a>
 
             <table class="table table-striped table3" ng-show="whatifs">
                 <thead>
