nested app flow

--- a/admin/templ/stepDetail.html
+++ b/admin/templ/stepDetail.html
@@ -170,7 +170,7 @@
 
 </div>
 <div class="tab-pane" id="preview">
-    <iframe style="width: 100%; min-height: 600px" ng-src="{{masterTmpl}}?step={{obj._id}}&tenant={{tenant}}&app={{applid}}"></iframe>
+    <iframe style="width: 100%; min-height: 600px" ng-src="{{masterTmpl}}?step={{obj._id}}&tenant={{tenant}}&app={{applid}}&uid={{userID}}"></iframe>
 
 </div>
     <div class="tab-pane" id="track">
