--- a/tenants/Bridgevine/bvtmpl.html
+++ b/tenants/Bridgevine/bvtmpl.html
@@ -9,7 +9,9 @@
     <link href="assets/css/base.css" rel="stylesheet">
     <link href="assets/css/buttons.css" rel="stylesheet">
     <link href="assets/css/font-awesome.css" rel="stylesheet">
-
+    <script>
+        var adminURL = '/admin';
+    </script>
 
     <script src="assets/js/jquery-1.10.2.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
@@ -35,6 +37,7 @@
     <script src="../../dir/cartparms.js" type="text/javascript"></script>
     <script src="../../ctrl/cartadminctrl.js" type="text/javascript"></script>
     <script src="../../ctrl/prodctrl.js" type="text/javascript"></script>
+    <script src="../../ctrl/todoctrl.js" type="text/javascript"></script>
     <script src="../../ctrl/agentprodctrl.js" type="text/javascript"></script>
     <script src="../../ctrl/confirmationctrl.js" type="text/javascript"></script>
     <script src="../../ctrl/teaserctrl.js" type="text/javascript"></script>
