images and style changes

--- a/tenants/Bankrate/brtmpl.html
+++ b/tenants/Bankrate/brtmpl.html
@@ -21,6 +21,8 @@
     <script src="../../js/angular.min.js" type="text/javascript"></script>
     <script src="../../js/angular-cookies.min.js" type="text/javascript"></script>
     <script src="../../js/angular-sanitize.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="../../admin/js/moment.js"></script>
+    <script type="text/javascript" src="../../admin/js/datetimepicker.js"></script>
     <script src="../../js/sortable.js" type="text/javascript"></script>
     <script src="../../js/date.js" type="text/javascript"></script>
     <script src="../../js/select2.js" type="text/javascript"></script>
