--- a/tenants/Bridgevine/533d8a953dea839303000060.html
+++ b/tenants/Bridgevine/533d8a953dea839303000060.html
@@ -1,4 +1,4 @@
-<div class="box-8" ng-controller="surveyctrl">
+<div class="container-content" ng-controller="surveyctrl">
     <div class="clearfix">
 
 
@@ -16,4 +16,3 @@
         <div class="clearer h30">&nbsp;</div>
     </div><!-- /// -->
 </div>
-
